# example-normalisation

./: README.md  example_normalised_format.html  generate_pdf.py  normalise_pdf.py  pyproject.toml  test_normalise_pdf.py
test_output/: example_1.tex  test_single_sentence_pdf_with_fi_glyph.tex
